[package]
name = "devii"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
blockchain_types = { version="0.0.1" }
reqwest = {version = "0.11.11", features = ["json"]}
named_type = "0.2.2"
named_type_derive = "0.2.2"
convert_case = "0.6.0"

[dev-dependencies]
tokio-test = "*"