[package]
name = "devii"
description = "Devii Connection so you can easily Insert, Update, Query, and Delete complex structs into your Devii Database (PostGres)"
version = "0.0.1"
edition = "2021"
documentation = "https://github.com/jase-k/devii"
homepage = "https://github.com/jase-k/devii"
repository = "https://github.com/jase-k/devii"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
blockchain_types = { version="0.0.1" }
reqwest = {version = "0.11.11", features = ["json"]}
named_type = "0.2.2"
named_type_derive = "0.2.2"
convert_case = "0.6.0"

[dev-dependencies]
tokio-test = "*"